Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Venugupta.github.io : Welcome to my pages!!!" />
+    <meta name="description" content="venugupta.github.io : In Javaland, by King Java&#39;s royal decree, Verbs are owned by Nouns. -Steve Yegge" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Venugupta.github.io</title>
+    <title>venugupta.github.io</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/venugupta">View on GitHub</a>
 
-          <h1 id="project_title">Venugupta.github.io</h1>
-          <h2 id="project_tagline">Welcome to my pages!!!</h2>
+          <h1 id="project_title">venugupta.github.io</h1>
+          <h2 id="project_tagline">In Javaland, by King Java&#39;s royal decree, Verbs are owned by Nouns. -Steve Yegge</h2>
 
         </header>
     </div>
