Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="venugupta.github.io : In Javaland, by King Java&#39;s royal decree, Verbs are owned by Nouns. -Steve Yegge" />
+    <meta name="description" content="venugupta.github.io : " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/venugupta">View on GitHub</a>
 
           <h1 id="project_title">venugupta.github.io</h1>
-          <h2 id="project_tagline">In Javaland, by King Java&#39;s royal decree, Verbs are owned by Nouns. -Steve Yegge</h2>
+          <h2 id="project_tagline"></h2>
 
         </header>
     </div>
@@ -30,7 +30,7 @@
         <h3>
 <a name="welcome-to-my-pages" class="anchor" href="#welcome-to-my-pages"><span class="octicon octicon-link"></span></a>Welcome to My Pages!!!</h3>
 
-<p>Myself Venu Bukka, software programmer from down south of India. I work as a senior software engineer at a major US multinational.
+<p>Myself Venu Bukka, software programmer hailing from down south of India. I work as a senior software engineer at a major US multinational.
 For any software consulting, do reach me at my <a href="mailto:%20venugupta4u@gmail.com">email</a></p>
 
 <h3>
