--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@ This project shows one possible implementation of the same in .NET</p>
     </div>
 
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
+   <!-- <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-    </div>
+    </div>-->
 
     
 
