Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@ For any software consulting, do reach me at my <a href="mailto:%20venugupta4u@gm
 This project shows one possible implementation of the same in .NET</p>
 
 <h3>
+<a name="web-form-validator" class="anchor" href="#web-form-validator"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/web-form-validator/">Web Form Validator</a>
+</h3>
+
+<p>This Jqeury based web form validator makes form validation as simple as calling a method!!!!! </p>
+
+<h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Venu Bukka (<a href="https://github.com/venugupta" class="user-mention">@venugupta</a>)</p>
@@ -57,11 +63,11 @@ This project shows one possible implementation of the same in .NET</p>
     </div>
 
     <!-- FOOTER  -->
-   <!-- <div id="footer_wrap" class="outer">
+    <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-    </div>-->
+    </div>
 
     
 
