Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ This project shows one possible implementation of the same in .NET</p>
 <a name="web-form-validator" class="anchor" href="#web-form-validator"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/web-form-validator/">Web Form Validator</a>
 </h3>
 
-<p>This Jqeury based web form validator makes form validation as simple as calling a method!!!!! </p>
+<p>This Jqeury based web form validator makes form validation as simple as calling a function!!!!! </p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
