Added Firehose chat
added chat

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@ This project shows one possible implementation of the same in .NET</p>
       </footer>
     </div>
 
-    
+    <script type="text/javascript">
+  var FHChat = {product_id: "ac71942f2900"};
+  FHChat.properties={};FHChat.set=function(key,data){this.properties[key]=data};!function(){var a,b;return b=document.createElement("script"),a=document.getElementsByTagName("script")[0],b.src="https://chat-client-js.firehoseapp.com/chat-min.js",b.async=!0,a.parentNode.insertBefore(b,a)}();
+</script>
 
   </body>
 </html>
