Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="venugupta.github.io : " />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="venugupta.github.io : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -56,6 +56,13 @@ This project shows one possible implementation of the same in .NET</p>
 <p>This Jqeury based web form validator makes form validation as simple as calling a function!!!!! </p>
 
 <h3>
+<a name="workflow-framework" class="anchor" href="#workflow-framework"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/Workflow-Framework-private.Contact-me-for-source-code-/">Workflow Framework</a>
+</h3>
+
+<p>Framework to automate workflows
+(Contact me for source code)</p>
+
+<h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Venu Bukka (<a href="https://github.com/venugupta" class="user-mention">@venugupta</a>)</p>
@@ -69,10 +76,7 @@ This project shows one possible implementation of the same in .NET</p>
       </footer>
     </div>
 
-    <script type="text/javascript">
-  var FHChat = {product_id: "ac71942f2900"};
-  FHChat.properties={};FHChat.set=function(key,data){this.properties[key]=data};!function(){var a,b;return b=document.createElement("script"),a=document.getElementsByTagName("script")[0],b.src="https://chat-client-js.firehoseapp.com/chat-min.js",b.async=!0,a.parentNode.insertBefore(b,a)}();
-</script>
+    
 
   </body>
 </html>
