Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@ This project shows one possible implementation of the same in .NET</p>
 (Contact me for source code)</p>
 
 <h3>
+<a name="cheap-air-engine" class="anchor" href="#cheap-air-engine"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/Cheap-Air-Engine-hire-me-for-code-/">Cheap Air Engine</a>
+</h3>
+
+<p>Want to build a air search/book engine competing with the world leaders, hire me !!!! If you have the zeal to compete with the some of the leading travel fare portals, you'll get hotel/car engine for free!!!!!</p>
+
+<h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Venu Bukka (<a href="https://github.com/venugupta" class="user-mention">@venugupta</a>)</p>
