--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ This project shows one possible implementation of the same in .NET</p>
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Venu Bukka (<a href="https://github.com/venugupta" class="user-mention">@venugupta</a>)</p>
+<!--<p>Venu Bukka (<a href="https://github.com/venugupta" class="user-mention">@venugupta</a>)</p> -->
       </section>
     </div>
 
