--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <h3>
 <a name="welcome-to-my-pages" class="anchor" href="#welcome-to-my-pages"><span class="octicon octicon-link"></span></a>Welcome to My Pages!!!</h3>
 
-<p></p>
+<p>
+  We've a unique distinction of training & initiating & giving consultation to multi-billion dollar US Companies with respect to the following within first week of employment :
+  <span>1)Distributed cache</span>
+  <span>2)Securing source-code from hackers</span>
+  <span>3)Prevent users from accessing the content free!!!!!</span>
+</p>
 
 <h3>
 <a name="some-of-my-open-source-projects" class="anchor" href="#some-of-my-open-source-projects"><span class="octicon octicon-link"></span></a>Some of my open-source projects:</h3>
