--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <p>
   We've a unique distinction of training & initiating & giving consultation to multi-billion dollar US Companies with respect to the following within first week of employment :
-  <span>1)Distributed cache</span>
-  <span>2)Securing source-code from hackers</span>
+  <span>1)Distributed cache</span><br />
+  <span>2)Securing source-code from hackers</span><br />
   <span>3)Prevent users from accessing the content free!!!!!</span>
 </p>
 
