--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
 <a name="welcome-to-my-pages" class="anchor" href="#welcome-to-my-pages"><span class="octicon octicon-link"></span></a>Welcome to My Pages!!!</h3>
 
 <p>
-  We've a unique distinction of training & initiating & giving consultation to multi-billion dollar US Companies with respect to the following within first week of employment :
-  <span>1)Distributed cache</span><br />
-  <span>2)Securing source-code from hackers</span><br />
-  <span>3)Prevent users from accessing the content free!!!!!</span>
+  <div>
+    <div></div>We've a unique distinction of initiating & giving consultation to multi-billion dollar US Companies with respect to the following within first week of employment :</div>
+    <div>1)Distributed cache</div>
+    <div>2)Securing source-code from hackers</div
+    <div>3)Prevent users from accessing the content for free!!!!!</div>
+  </div>
 </p>
 
 <h3>
