--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <h3>
 <a name="welcome-to-my-pages" class="anchor" href="#welcome-to-my-pages"><span class="octicon octicon-link"></span></a>Welcome to My Pages!!!</h3>
 
-<p>
-  <div>
-    <div></div>We've a unique distinction of initiating & giving consultation to multi-billion dollar US Companies with respect to the following within first week of employment :</div>
-    <div>1)Distributed cache</div>
-    <div>2)Securing source-code from hackers</div
-    <div>3)Prevent users from accessing the content for free!!!!!</div>
-  </div>
-</p>
+<div>
+  <p>
+    <p>We've a unique distinction of initiating & giving consultation to multi-billion dollar US Companies with respect to the following within first week of employment :</p>
+    <p>1)Distributed cache</p>
+    <p>2)Securing source-code from hackers</p>
+    <p>3)Prevent users from accessing the content for free!!!!!</p>
+  </p>
+</div>
 
 <h3>
 <a name="some-of-my-open-source-projects" class="anchor" href="#some-of-my-open-source-projects"><span class="octicon octicon-link"></span></a>Some of my open-source projects:</h3>
