--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div>
   <p>
-    <p>We've a unique distinction of initiating & giving consultation to multi-billion dollar US Companies with respect to the following within first week of employment :</p>
+    <p>We've a unique distinction of initiating & giving consultation to multiple multi-billion dollar US Companies with respect to the following within first week of employment :</p>
     <p>1)Distributed cache</p>
     <p>2)Securing source-code from hackers</p>
     <p>3)Prevent users from accessing the content for free!!!!!</p>
