--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 <a name="welcome-to-my-pages" class="anchor" href="#welcome-to-my-pages"><span class="octicon octicon-link"></span></a>Welcome to My Pages!!!</h3>
 
 <div>
-  <p>
-    <p>We've a unique distinction of initiating & giving consultation to multiple multi-billion dollar US Companies with respect to the following within first week of employment :</p>
-    <p>1)Distributed cache</p>
-    <p>2)Securing source-code from hackers</p>
-    <p>3)Prevent users from accessing the content for free!!!!!</p>
-  </p>
+ <p>
+   <b><u>Note:</u></b>
+   <span>
+     For anyone looking to hire me, my remuneration will be no less than 50lakh INR/annum 
+     in cash with a minimum hiring period of 5yrs.This is subject to change with respect to organization & place of location
+   </span>
+ </p>
 </div>
 
 <h3>
