--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <b><u>Note:</u></b>
    <span>
      For anyone looking to hire me, my remuneration will be no less than 50lakh INR/annum 
-     in cash with a minimum hiring period of 5yrs.This is subject to change with respect to organization & place of location
+     in cash with a minimum hiring period of 5yrs.This is subject to change with respect to organization & place of work
    </span>
  </p>
 </div>
