--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
      in cash with a minimum hiring period of 5yrs.This is subject to change with respect to organization & place of work
    </span>
  </p>
+ <p>
+   None of the projects in my github account is for sale.If you find any unauthorized use of the same, please report to me so that necessary action will be taken
+ </p>
  <p>If anyone has zeal to take on travel fake-portal, you've come to the perfect person. Together, we can build something much better than those incapable lots!!!!!</p>
 </div>
 
