--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
    <b><u>Note:</u></b>
    <span>
      For anyone looking to hire me, my remuneration will be no less than 50lakh INR/annum 
-     in cash with a minimum hiring period of 5yrs.This is subject to change with respect to organization & place of work
+     in cash with a minimum hiring period of 5yrs with growth every year.
+     I don't accept any kind of health benefits to either me or my family in exchange for cash.
+     Any stock options will only be in addendum to the quoted amount.
+     Stock options which are not traded in a stock exchange are not at all accepted.
+     To put it simple, my remuneration will only be in terms of cash and not any goods/services/stocks/health benefits/misc.
+     I better know what to buy|how to take care of myself & don't need company's intervention in my personal life
+     This is subject to change with respect to organization , place of work & kind of work<br />
+     Dont expect any more free projects. There's clear plagiarism brought to my notice
    </span>
  </p>
  <p>
