--- a/index.html
+++ b/index.html
@@ -30,30 +30,11 @@
         <h3>
 <a name="welcome-to-my-pages" class="anchor" href="#welcome-to-my-pages"><span class="octicon octicon-link"></span></a>Welcome to My Pages!!!</h3>
 
-<div>
- <!--<p>
-   <b><u>Note:</u></b>
-   <span>
-     For anyone looking to hire me, my remuneration will be no less than 50lakh INR/annum 
-     in cash with a minimum hiring period of 5yrs with growth every year.
-     I don't accept any kind of health benefits to either me or my family in exchange for cash.
-     Any stock options will only be in addendum to the quoted amount.
-     Stock options which are not traded in a stock exchange(i.e, which can't be encashed instantly or don't have goodwill(only profits, no relation to losses)) are not at all accepted.
-     To put it simple, my remuneration will only be in terms of cash and not any goods/services/stocks/health benefits/misc.
-     I better know what to buy|how to take care of myself & don't need company's intervention in my personal life
-     This is subject to change with respect to organization , place of work & kind of work<br />
-     Dont expect any more free projects. There's clear plagiarism brought to my notice
-   </span>
- </p>
- <p>
-   None of the projects in my github account is for sale.If you find any unauthorized use of the same, please report to me so that necessary action will be taken
- </p>-->
-</div>
 
 <h3>
 <a name="some-of-my-open-source-projects" class="anchor" href="#some-of-my-open-source-projects"><span class="octicon octicon-link"></span></a>Some of my open-source projects:</h3>
 
-<h3>
+<!--<h3>
 <a name="multi-threaded-worker-queue" class="anchor" href="#multi-threaded-worker-queue"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/multi-threaded-worker-queue/">Multi-Threaded Worker Queue</a>
 </h3>
 
@@ -64,28 +45,22 @@
 </h3>
 
 <p>We all know IIS instantiates a worker process the first time it receives a request and worker process creates app domains, spawns a thread for each request to serve.
-This project shows one possible implementation of the same in .NET</p>
+This project shows one possible implementation of the same in .NET</p> -->
 
 <h3>
 <a name="web-form-validator" class="anchor" href="#web-form-validator"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/web-form-validator/">Web Form Validator</a>
 </h3>
 
 <p>This Jqeury based web form validator makes form validation as simple as calling a function!!!!! </p>
-
+<!--
 <h3>
 <a name="workflow-framework" class="anchor" href="#workflow-framework"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/Workflow-Framework-private.Contact-me-for-source-code-/">Workflow Framework</a>
 </h3>
 
 <p>Framework to automate workflows
-(Contact me for source code)</p>
+</p> -->
 
-<!--
-<h3>
-<a name="cheap-air-engine" class="anchor" href="#cheap-air-engine"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/Cheap-Air-Engine-hire-me-for-code-/">Cheap Air Engine</a>
-</h3>
 
-<p>Want to build a air search/book engine competing with the world leaders, hire me !!!! If you have the zeal to compete with the some of the leading travel fare portals, you'll get hotel/car engine for free!!!!!</p>
--->
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
