--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>venugupta.github.io</title>
+    <title>bukkavenu.github.io</title>
   </head>
 
   <body>
@@ -48,14 +48,21 @@
 This project shows one possible implementation of the same in .NET</p> -->
 
 <h3>
-<a name="web-form-validator" class="anchor" href="#web-form-validator"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/web-form-validator/">Web Form Validator</a>
+<a name="web-form-validator" class="anchor" href="#web-form-validator"><span class="octicon octicon-link"></span></a><a href="https://github.com/bukkavenu/web-form-validator/">Web Form Validator</a>
 </h3>
 
 <p>This Jqeury based web form validator makes form validation as simple as calling a function!!!!! </p>
+        
+<h3>
+<a name="object resolver" class="anchor" href="#web-form-validator"><span class="octicon octicon-link"></span></a><a href="https://github.com/bukkavenu/Object-Resolver/">Object Resolver</a>
+</h3>
+
+<p>Light-weight Dependency Injection for .NET  </p>
 <!--
 <h3>
 <a name="workflow-framework" class="anchor" href="#workflow-framework"><span class="octicon octicon-link"></span></a><a href="http://venugupta.github.io/Workflow-Framework-private.Contact-me-for-source-code-/">Workflow Framework</a>
 </h3>
+<p>This Jqeury based web form validator makes form validation as simple as calling a function!!!!! </p>
 
 <p>Framework to automate workflows
 </p> -->
@@ -64,7 +71,7 @@ This project shows one possible implementation of the same in .NET</p> -->
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<!--<p>Venu Bukka (<a href="https://github.com/venugupta" class="user-mention">@venugupta</a>)</p> -->
+Venu Bukka (<a href="https://github.com/bukkavenu" class="user-mention">@bukkavenu</a>)
       </section>
     </div>
 
