--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/venugupta">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/bukkavenu">View on GitHub</a>
 
-          <h1 id="project_title">venugupta.github.io</h1>
+          <h1 id="project_title">bukkavenu.github.io</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
